# anki_generator

./: .env.example  .gitignore  GEMINI.md  PRD.md  README.md  Spec.md  main.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
anki_generator/: __init__.py  __main__.py  anki_exporter.py  cli.py  config.py  extractors.py  gemini_client.py  models.py
content/: .gitkeep
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: __init__.py  test_anki_exporter.py  test_cli_noninteractive.py  test_config.py  test_extractors.py  test_gemini_client.py  test_models.py
